fix(ui): mobile left sidebar overflow hidden

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -324,7 +324,6 @@
 
     .left-sidebar-inner {
       transform: translate3d(0, 0, 0);
-      overflow: visible;
     }
 
     > .shade-mask {
